--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,21 @@
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "python-template"
-version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
-requires-python = ">=3.11"
-dependencies = []
+name = "midoghanam"
+version = "0.0.1"
+description = "مكتبتي الشخصية – midoghanam"
+authors = [
+  { name = "Mohamed Ahmed Ghanam", email = "mghanam883@outlook.com" }
+]
+readme = "README.md"
+license = { text = "MIT" }
+requires-python = ">=3.6"
+classifiers = [
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent"
+]
+
