--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "midoghanam"
-version = "0.0.2"
+version = "0.0.3"
 description = "مكتبتي الشخصية – midoghanam"
 authors = [
   { name = "Mohamed Ahmed Ghanam", email = "mghanam883@outlook.com" }
@@ -17,5 +17,8 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent"
+]
+dependencies = [
+    "setuptools>=59.6.0",
 ]
 
